<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/solution_tv"
            android:text="@string/_0"
            android:textSize="64sp"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/result_tv"
            android:layout_margin="16dp" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/result_tv"
            android:text="@string/_0"
            android:textSize="64sp"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/buttons_Layout"
            android:layout_margin="16dp" />


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#EFE9E9"
            android:paddingVertical="16dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/buttons_Layout" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.972">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" tools:ignore="ExtraText">

            <com.google.android.material.button.MaterialButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
                    android:textSize="32sp"
                    android:textColor="@color/white"
                    android:backgroundTint="#163AF1"
                    android:layout_margin="12dp"
                    android:id="@+id/button_c"
                    android:text="@string/c"
            />
            <com.google.android.material.button.MaterialButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
                    android:textSize="32sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/material_dynamic_tertiary30"
                    android:layout_margin="12dp"
                    android:id="@+id/button_openB"
                    android:text="@string/stringOpenB"
            />
            <com.google.android.material.button.MaterialButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
                    android:textSize="32sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/material_dynamic_tertiary30"
                    android:layout_margin="12dp"
                    android:id="@+id/button_closeB"
                    android:text="@string/closeb"
            />
            <com.google.android.material.button.MaterialButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
                    android:textSize="32sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/holo_blue_dark"
                    android:layout_margin="12dp"
                    android:id="@+id/button_divide"
                    android:text="@string/divide"
            />


        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" tools:ignore="ExtraText">

            <com.google.android.material.button.MaterialButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
                    android:textSize="32sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:layout_margin="12dp"
                    android:id="@+id/button_7"
                    android:text="@string/_7"
            />
            <com.google.android.material.button.MaterialButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
                    android:textSize="32sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:layout_margin="12dp"
                    android:id="@+id/button_8"
                    android:text="@string/_8"
            />
            <com.google.android.material.button.MaterialButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
                    android:textSize="32sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:layout_margin="12dp"
                    android:id="@+id/button_9"
                    android:text="@string/_9"
            />
            <com.google.android.material.button.MaterialButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
                    android:textSize="32sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/holo_blue_dark"
                    android:layout_margin="12dp"
                    android:id="@+id/button_multiply"
                    android:text="@string/multiply"
            />


        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" tools:ignore="ExtraText">

            <com.google.android.material.button.MaterialButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
                    android:textSize="32sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:layout_margin="12dp"
                    android:id="@+id/button_4"
                    android:text="@string/_4"
            />
            <com.google.android.material.button.MaterialButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
                    android:textSize="32sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:layout_margin="12dp"
                    android:id="@+id/button_5"
                    android:text="@string/_5"
            />
            <com.google.android.material.button.MaterialButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
                    android:textSize="32sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:layout_margin="12dp"
                    android:id="@+id/button_6"
                    android:text="@string/_6"
            />
            <com.google.android.material.button.MaterialButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
                    android:textSize="32sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/holo_blue_dark"
                    android:layout_margin="12dp"
                    android:id="@+id/button_add"
                    android:text="@string/plus"
            />


        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" tools:ignore="ExtraText">

            <com.google.android.material.button.MaterialButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
                    android:textSize="32sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:layout_margin="12dp"
                    android:id="@+id/button_1"
                    android:text="@string/_1"
            />
            <com.google.android.material.button.MaterialButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
                    android:textSize="32sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:layout_margin="12dp"
                    android:id="@+id/button_2"
                    android:text="@string/_2"
            />
            <com.google.android.material.button.MaterialButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
                    android:textSize="32sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:layout_margin="12dp"
                    android:id="@+id/button_3"
                    android:text="@string/_3"
            />
            <com.google.android.material.button.MaterialButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
                    android:textSize="32sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/holo_blue_dark"
                    android:layout_margin="12dp"
                    android:id="@+id/button_subtract"
                    android:text="@string/minus"
            />


        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" tools:ignore="ExtraText">

            <com.google.android.material.button.MaterialButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:backgroundTint="#163AF1"
                    android:layout_margin="12dp"
                    android:id="@+id/button_allClear"
                    android:text="@string/ac"
            />
            <com.google.android.material.button.MaterialButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
                    android:textSize="32sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:layout_margin="12dp"
                    android:id="@+id/button_0"
                    android:text="@string/_0"
            />
            <com.google.android.material.button.MaterialButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
                    android:textSize="32sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:layout_margin="12dp"
                    android:id="@+id/button_dot"
                    android:text="@string/dot"
            />
            <com.google.android.material.button.MaterialButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
                    android:textSize="32sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/holo_blue_dark"
                    android:layout_margin="12dp"
                    android:id="@+id/button_equal"
                    android:text="@string/equal"
            />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>